# cyberarena

./: LICENSE  README.md
.github/workflows/: deploy.yaml
deploy/: README.md  deploy.sh  packages.sh
holded/: pyproject.toml  test.py  upload.sh
holded/src/holded/: __init__.py
purchase-order/: README.md  main.py  purchase-order.service  pyproject.toml  upload.sh
purchase-order/providers/: __init__.py  common.py  coolaccesorios.py  kaquucomponentes.py  pccomponentes.py  pcxeon.py  skuterzone.py  soluziondigital.py  spainsellers.py
purchase-order/static/: index.html  styles.css
purchase-order/templates/: upload.html
repairdesk/: pyproject.toml  upload.sh
repairdesk-to-holded/: README.md  TODO.md  bridge.py  conf.py  example.conf.jsonc  pyproject.toml  repairdesk-to-holded.service  server.py  upload.sh
repairdesk-to-holded/bridge/: __init__.py  utils.py
repairdesk-to-holded/static/: styles.css
repairdesk-to-holded/templates/: index.html  logs.html  status.html  warnings.html
repairdesk/src/: test.py
repairdesk/src/repairdesk/: __init__.py
ticket-to-excel/: README.md  main.py  pyproject.toml
trade-in/: main.py  pyproject.toml  trade-in.service  upload.sh
trade-in/templates/: index.html
