[project]
name = "purchase-order"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "repairdesk",
    "requests>=2.32.4",
    "xlwt>=1.3.0",
]

[dependency-groups]
dev = ["ruff>=0.12.0", "ty>=0.0.1a11"]

[tool.uv.sources]
repairdesk = { path = "../repairdesk" }

[tool.pyright]
venvPath = "."
venv = ".venv"
