[project]
name = "repairdesk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Josep Mengual", email = "josep@truita.es" }]
requires-python = ">=3.11"
dependencies = ["requests>=2.32.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
